# pythonProject9.1

./: .flake8  .gitignore  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
